minimal-ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Minimal EC2 Instance CloudFormation Template'

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    Description: EC2 instance type

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access

Resources:
  # Security Group
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2 instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: SSH access
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: HTTP access

  # EC2 Instance
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: ami-0c02fb55956c7d316  # Amazon Linux 2 AMI (update for your region)
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<h1>Hello from CloudFormation!</h1>" > /var/www/html/index.html
      Tags:
        - Key: Name
          Value: Simple-EC2-Instance

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref EC2Instance

  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt EC2Instance.PublicIp

  PublicDNSName:
    Description: Public DNS name of the newly created EC2 instance
    Value: !GetAtt EC2Instance.PublicDnsName

  WebURL:
    Description: URL of the web server
    Value: !Sub http://${EC2Instance.PublicDnsName}

  SSHCommand:
    Description: SSH command to connect to the instance
    Value: !Sub ssh -i ${KeyName}.pem ec2-user@${EC2Instance.PublicDnsName}
